Update to work with new youtube UI too
Signed-off-by: Giorgos Paraskevopoulos <geopar@central.ntua.gr>

--- a/hide-distractions.css
+++ b/hide-distractions.css
@@ -9,3 +9,15 @@
 #watch-discussion {
     display: none;
 }
+
+#related {
+    display: none;
+}
+
+#comments {
+    display: none;
+}
+
+ytd-page-manager > ytd-browse.ytd-page-manager {
+    display: none;
+}
