Fix feed hiding for the new youtube UI
The old selector for hiding the youtube feed was too generic and hid the feed
even when browsing a subscribed channel. The problem was fixed by limiting this
behavior only to the home subpage.

Signed-off-by: Giorgos Paraskevopoulos <geopar@central.ntua.gr>

--- a/hide-distractions.css
+++ b/hide-distractions.css
@@ -18,6 +18,6 @@
     display: none;
 }
 
-ytd-page-manager > ytd-browse.ytd-page-manager {
+ytd-browse[page-subtype=home] > ytd-two-column-browse-results-renderer {
     display: none;
 }
